[package]
name = "ray_trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ray_trace"
path = "src/lib.rs"

[dependencies]
indicatif = "0.17.6"
rayon = "1.8.0"
# For metal GPU, maybe use this later
metal = "0.27.0"
vec3 = { path = "./vec3" }
random = { path = "./random" }
image = { path = "./image" }
obj = { path = "./obj" }

[workspace]
members = [
  "vec3",
  "random",
  "image",
  "obj"
]
