[package]
name = "ray_trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.2"
image = "0.24.7"
metal = "0.27.0"
objc = { version = "0.2.4", features = ["objc_exception"] }
rand = "0.8.5"
